--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -8,7 +8,10 @@ ENV UV_PYTHON_PREFERENCE=only-managed
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install runtime dependencies
-RUN apt-get update && apt-get upgrade && apt-get install -y \
+RUN apt-get update && apt-get upgrade && apt-get install -y software-properties-common && \
+    add-apt-repository ppa:deadsnakes/ppa && \
+    apt-get update && apt-get install -y \
+    python3.11  python3.11-dev \
     libgeos-dev \
     libcurl4-openssl-dev \
     libssl-dev \
@@ -17,7 +20,6 @@ RUN apt-get update && apt-get upgrade && apt-get install -y \
     git \
     autoconf \
     automake \
-    build-essential \
     libtool \
     python3-pip \
     build-essential \
@@ -32,14 +34,15 @@ RUN apt-get update && apt-get upgrade && apt-get install -y \
     pandoc && \
     rm -rf /var/lib/apt/lists/* && apt-get clean
 
-RUN apt-get install -y software-properties-common && \
-       add-apt-repository ppa:deadsnakes/ppa && \
-       apt-get update
-
-RUN apt-get install -y  python3.11  python3.11-dev
 RUN  update-alternatives --install /usr/bin/python3 python3 /usr/bin/python3.11 1 && \
        update-alternatives --set python3 /usr/bin/python3.11
 
+
+RUN wget https://www.python.org/ftp/python/3.11.1/Python-3.11.1.tar.xz && \
+    sudo tar -xf Python-3.11.1.tar.xz && \
+    cd Python-3.11.1 && \
+    ./configure --enable-optimizations && \
+    make altinstall && cd /app
 
 COPY requirements.lock  pyproject.toml README.md ./
 COPY libs/megaparse/pyproject.toml libs/megaparse/README.md libs/megaparse/
