--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -48,13 +48,14 @@ COPY requirements.lock  pyproject.toml README.md ./
 COPY libs/megaparse/pyproject.toml libs/megaparse/README.md libs/megaparse/
 COPY libs/megaparse_sdk/pyproject.toml libs/megaparse_sdk/README.md libs/megaparse_sdk/
 
-RUN pip install uv
+RUN curl -LsSf https://astral.sh/uv/install.sh | sh
+ENV PATH="/root/.local/bin:$PATH"
 RUN uv pip install --no-cache --system -r requirements.lock
 
 RUN playwright install --with-deps && \
-    python -c "from unstructured.nlp.tokenize import download_nltk_packages; download_nltk_packages()" && \
-    python -c "import nltk;nltk.download('punkt_tab'); nltk.download('averaged_perceptron_tagger_eng')" && \
-    python -c "from unstructured.partition.model_init import initialize; initialize()"
+    uv run python -c "from unstructured.nlp.tokenize import download_nltk_packages; download_nltk_packages()" && \
+    uv run python -c "import nltk;nltk.download('punkt_tab'); nltk.download('averaged_perceptron_tagger_eng')" && \
+    uv run python -c "from unstructured.partition.model_init import initialize; initialize()"
 
 COPY . .
 
