--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -1,4 +1,4 @@
-FROM nvidia/cuda:12.6.3-cudnn-devel-ubuntu20.04
+FROM nvidia/cuda:12.2.2-cudnn8-runtime-ubuntu20.04
 
 WORKDIR /app
 
@@ -8,10 +8,11 @@ ENV UV_PYTHON_PREFERENCE=only-managed
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install runtime dependencies
-RUN apt-get update && apt-get upgrade && apt-get install -y software-properties-common && \
+RUN apt-get update && apt-get install -y software-properties-common && \
     add-apt-repository ppa:deadsnakes/ppa && \
     apt-get update && apt-get install -y \
-    python3.11  python3.11-dev \
+    python3.11  \
+    python3.11-dev \
     libgeos-dev \
     libcurl4-openssl-dev \
     libssl-dev \
@@ -45,10 +46,10 @@ RUN curl -LsSf https://astral.sh/uv/install.sh | sh
 ENV PATH="/root/.local/bin:$PATH"
 RUN uv pip install --no-cache --system -r requirements.lock
 
-RUN playwright install --with-deps && \
-    uv run python -c "from unstructured.nlp.tokenize import download_nltk_packages; download_nltk_packages()" && \
-    uv run python -c "import nltk;nltk.download('punkt_tab'); nltk.download('averaged_perceptron_tagger_eng')" && \
-    uv run python -c "from unstructured.partition.model_init import initialize; initialize()"
+RUN playwright install --with-deps
+RUN python3 -c "from unstructured.nlp.tokenize import download_nltk_packages; download_nltk_packages()" && \
+    python3 -c "import nltk;nltk.download('punkt_tab'); nltk.download('averaged_perceptron_tagger_eng')" && \
+    python3 -c "from unstructured.partition.model_init import initialize; initialize()"
 
 COPY . .
 
