--- a/libs/megaparse/pyproject.toml
+++ b/libs/megaparse/pyproject.toml
@@ -29,6 +29,7 @@ dependencies = [
     "langchain-core>=0.2.38",
     "llama-parse>=0.4.0",
     "pydantic-settings>=2.6.1",
+    "onnxruntime-gpu==1.18.1; platform_machine == 'x86_64'",
     "onnxtr[gpu-headless]>=0.6.0; platform_machine == 'x86_64'",
     "onnxtr[cpu]>=0.6.0; platform_machine != 'x86_64'",
     "pypdfium2>=4.30.0",
