--- a/.github/workflows/build-gpu.yml
+++ b/.github/workflows/build-gpu.yml
@@ -1,4 +1,4 @@
-name: Deploy to Amazon ECS
+name: Build docker GPU and push ECR
 
 on:
   push:
@@ -6,7 +6,6 @@ on:
 env:
   AWS_REGION: eu-west-1
   ECR_REPOSITORY: quivrhq/megaparse-gpu
-  ECS_SERVICE: megaparse-service
   ECS_CLUSTER: megaparse
   ECS_TASK_DEFINITION: .aws/task_definition.json
   CONTAINER_NAME: megaparse
@@ -16,7 +15,7 @@ permissions:
 
 jobs:
   deploy:
-    name: Deploy
+    name: Build docker-gpu
     runs-on: ubuntu-latest
     environment: production
     outputs:
