--- a/Dockerfile.gpu
+++ b/Dockerfile.gpu
@@ -46,9 +46,10 @@ ENV PATH="/root/.local/bin:$PATH"
 RUN uv pip install --no-cache --system -r requirements.lock
 
 RUN playwright install --with-deps
-RUN python3 -c "from unstructured.nlp.tokenize import download_nltk_packages; download_nltk_packages()" && \
-    python3 -c "import nltk;nltk.download('punkt_tab'); nltk.download('averaged_perceptron_tagger_eng')" && \
-    python3 -c "from unstructured.partition.model_init import initialize; initialize()"
+RUN python3 -c "from unstructured.nlp.tokenize import download_nltk_packages; download_nltk_packages()"
+
+# FIXME: causes runtime link issues with onnxruntime_pybind_state.cc:507 vo
+# python3 -c "from unstructured.partition.model_init import initialize; initialize()"
 
 COPY . .
 
