--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -26,7 +26,7 @@ jobs:
       - name: 😭 Install system dependencies
         run: |
           sudo apt-get update && sudo apt-get install -y \
-            netcat \
+            netcat-traditional \
             unzip \
             libgeos-dev \
             libcurl4-openssl-dev \
