--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -1,4 +1,4 @@
-name: Deploy to Amazon ECS
+name: Build Docker image and push ECR
 
 on:
   push:
@@ -9,7 +9,6 @@ on:
 env:
   AWS_REGION: eu-west-1
   ECR_REPOSITORY: quivrhq/megaparse
-  ECS_SERVICE: megaparse-service
   ECS_CLUSTER: megaparse
   ECS_TASK_DEFINITION: .aws/task_definition.json
   CONTAINER_NAME: megaparse
@@ -19,7 +18,7 @@ permissions:
 
 jobs:
   deploy:
-    name: Deploy
+    name: build docker
     runs-on: ubuntu-latest
     environment: production
     outputs:
