feat: faster ocr (#180)
* doctr + tests working

* tests + working ocr

* fix onnxruntime

* gpu file docker

* req gpu

* noninteractive

* add pip3

* pyhton3.11

* pin uv

* python3.11

* python

* uv run ;

* uv run ;

* fix onnxruntime

* onnxruntime fix

* ci build gpu image

* ci build gpu image

* doctr

* docker fix

* update req

* working gpu cuda

* working gpu cuda

* nltk download

* fix error ext.FUNK + tests

* log parser choice

* correct heuristic

* cleanup

* fix CI

---------

Co-authored-by: aminediro <aminedirhoussi@gmail.com>

--- a/.github/workflows/build-gpu.yml
+++ b/.github/workflows/build-gpu.yml
@@ -1,14 +1,11 @@
-name: Build Docker image and push ECR
+name: Build docker GPU and push ECR
 
 on:
   push:
-    tags:
-      - "v*"
-    branches: [main]
 
 env:
   AWS_REGION: eu-west-1
-  ECR_REPOSITORY: quivrhq/megaparse
+  ECR_REPOSITORY: quivrhq/megaparse-gpu
   ECS_CLUSTER: megaparse
   ECS_TASK_DEFINITION: .aws/task_definition.json
   CONTAINER_NAME: megaparse
@@ -18,7 +15,7 @@ permissions:
 
 jobs:
   deploy:
-    name: build docker
+    name: Build docker-gpu
     runs-on: ubuntu-latest
     environment: production
     outputs:
@@ -48,7 +45,7 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build a docker container and push it to ECR
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG -f Dockerfile.gpu .
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
 
           # Tag the image as 'latest' and push
