--- a/libs/megaparse/pyproject.toml
+++ b/libs/megaparse/pyproject.toml
@@ -29,8 +29,11 @@ dependencies = [
     "langchain-core>=0.2.38",
     "llama-parse>=0.4.0",
     "pydantic-settings>=2.6.1",
+    "onnxruntime==1.20.0; platform_machine == 'x86_64'",
+    "onnxruntime-gpu==1.20.0; platform_machine == 'x86_64'",
+    "onnxtr[gpu-headless]>=0.6.0; platform_machine == 'x86_64'",
+    "onnxtr[cpu]>=0.6.0; platform_machine != 'x86_64'",
     "pypdfium2>=4.30.0",
-
 ]
 
 [project.optional-dependencies]
@@ -41,7 +44,7 @@ api = [
     "uvicorn>=0.32.0",
     "fastapi>=0.115.2",
     "ratelimit>=2.2.1",
-    "nats-py>=2.9.0",
+
 ]
 
 
