--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ dev-dependencies = [
     "pytest>=8.3.3",
     "pytest-xdist>=3.6.1",
     "pytest-cov>=5.0.0",
+    "pytest-profiling>=1.8.1",
 ]
 
 [tool.rye.workspace]
