--- a/libs/megaparse/pyproject.toml
+++ b/libs/megaparse/pyproject.toml
@@ -23,10 +23,10 @@ dependencies = [
     "langchain-anthropic>=0.1.23",
     "python-magic>=0.4.27",
     "unstructured[all-docs]==0.15.0",
-    "langchain>=0.2.14,<0.3.0",
-    "langchain-community>=0.2.0",
+    "langchain>=0.3,<0.4",
+    "langchain-community>=0.3,<0.4",
     "langchain-openai>=0.1.21",
-    "langchain-core>=0.2.38",
+    "langchain-core>=0.3,<0.4",
     "llama-parse>=0.4.0",
     "pydantic-settings>=2.6.1",
     "onnxruntime==1.20.0; platform_machine == 'x86_64'",
