--- a/libs/megaparse_sdk/pyproject.toml
+++ b/libs/megaparse_sdk/pyproject.toml
@@ -15,7 +15,7 @@ readme = "README.md"
 requires-python = "< 3.12"
 
 [build-system]
-requires = ["hatchling"]
+requires = ["hatchling==1.26.3"]
 build-backend = "hatchling.build"
 
 [tool.rye]
