--- a/libs/megaparse_sdk/pyproject.toml
+++ b/libs/megaparse_sdk/pyproject.toml
@@ -12,7 +12,7 @@ dependencies = [
 ]
 
 readme = "README.md"
-requires-python = "< 3.12"
+requires-python = ">= 3.11"
 
 [build-system]
 requires = ["hatchling==1.26.3"]
