--- a/libs/megaparse_sdk/pyproject.toml
+++ b/libs/megaparse_sdk/pyproject.toml
@@ -9,6 +9,10 @@ dependencies = [
     "httpx>=0.27.0",
     "nats-py>=2.9.0",
     "loguru>=0.7.2",
+    "pydantic>=2.10.6",
+    "pydantic-settings>=2.8.0",
+    "numpy>=2.2.3",
+    "pillow>=11.1.0",
 ]
 
 readme = "README.md"
@@ -28,3 +32,9 @@ allow-direct-references = true
 
 [tool.hatch.build.targets.wheel]
 packages = ["megaparse_sdk"]
+
+[dependency-groups]
+dev = [
+    "pytest>=8.3.4",
+    "pytest-asyncio>=0.25.3",
+]
